--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
             menu.classList.remove('openMenu');
         }
     </script>
-    <script src="/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
