--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <li><a href="#bedAdvantage">床墊優勢</a></li>
                 <li><a href="#recommendation">好評推薦</a></li>
                 <li><a href="#transport">運送方式</a></li>
-                <li><a href="#productsList">商品列表</a></li>
                 <li><a href="#orderInfo">立即預訂</a></li>
+                <li><a href="/admin.html">後台</a></li>
             </ul>
         </div>
     </nav>
@@ -40,11 +40,15 @@
         <h3 class="section-title">床墊優勢</h3>
         <ul class="bedAdvantage">
             <li>
-                <img class="bedAdvantage-img" src="https://i.imgur.com/tR426y5.png" alt="原木料環保">
+                <img class="bedAdvantage-img"
+                    src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/tR426y5.png?raw=true"
+                    alt="原木料環保">
                 <p class="bedAdvantage-text">原木料環保</p>
             </li>
             <li>
-                <img class="bedAdvantage-img" src="https://i.imgur.com/Fd2MiBb.png" alt="好收納">
+                <img class="bedAdvantage-img"
+                    src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/Fd2MiBb.png?raw=true"
+                    alt="好收納">
                 <p class="bedAdvantage-text">好收納</p>
             </li>
             <li>
@@ -108,10 +112,12 @@
             <div class="recommendation-wall">
                 <ul class="gallery-top">
                     <li class="recommendation-card">
-                        <img src="https://i.imgur.com/cXcOLhu.png" alt="">
+                        <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/NiUXr6L.png?raw=true"
+                            alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="https://i.imgur.com/I9L7WOr.png" alt="">
+                                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/I9L7WOr.png?raw=true"
+                                    alt="">
                                 <div>
                                     <p>王六角</p>
                                     <p class="recommend-text">Jodan 雙人床架</p>
@@ -121,10 +127,12 @@
                         </div>
                     </li>
                     <li class="recommendation-card">
-                        <img src="https://i.imgur.com/BefHmH2.png" alt="">
+                        <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/BefHmH2.png?raw=true"
+                            alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="https://i.imgur.com/CUFGfay.png" alt="">
+                                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/CUFGfay.png?raw=true"
+                                    alt="">
                                 <div>
                                     <p>Leaf</p>
                                     <p class="recommend-text">Antony 雙人床架</p>
@@ -138,7 +146,8 @@
                             alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="https://i.imgur.com/8WwZsLS.png" alt="">
+                                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/8WwZsLS.png?raw=true"
+                                    alt="">
                                 <div>
                                     <p>美濃鄧子琪</p>
                                     <p class="recommend-text">Charles 系列儲物組合</p>
@@ -147,39 +156,15 @@
                             <p>廚房必備美用品！</p>
                         </div>
                     </li>
-                    <li class="recommendation-card">
-                        <img src="https://i.imgur.com/HvT3zlU.png" alt="">
-                        <div class="recommend-content">
-                            <div class="recommend-img">
-                                <img src="https://i.imgur.com/NycuPVy.png" alt="">
-                                <div>
-                                    <p>isRaynotArray</p>
-                                    <p class="recommend-text">Antony 雙人床架</p>
-                                </div>
-                            </div>
-                            <p>物超所值!</p>
-                        </div>
-                    </li>
-                    <li class="recommendation-card">
-                        <img src="https://i.imgur.com/Ed7bxLr.png" alt="">
-                        <div class="recommend-content">
-                            <div class="recommend-img">
-                                <img src="https://i.imgur.com/zdFOQIv.png" alt="">
-                                <div>
-                                    <p>程鮭魚</p>
-                                    <p class="recommend-text">Louvre 雙人床架</p>
-                                </div>
-                            </div>
-                            <p>租屋用剛剛好</p>
-                        </div>
-                    </li>
                 </ul>
                 <ul class="gallery-bottom">
                     <li class="recommendation-card">
-                        <img src="https://i.imgur.com/BefHmH2.png" alt="">
+                        <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/BefHmH2.png?raw=true"
+                            alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="https://i.imgur.com/W7fyzp2.png" alt="">
+                                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/W7fyzp2.png?raw=true"
+                                    alt="">
                                 <div>
                                     <p>小杰</p>
                                     <p class="recommend-text">Louvre 雙人床架</p>
@@ -189,7 +174,8 @@
                         </div>
                     </li>
                     <li class="recommendation-card">
-                        <img src="https://i.imgur.com/mjA01Tk.png" alt="">
+                        <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/kwIRna8.png?raw=true"
+                            alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
                                 <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/8O1cOnG.png?raw=true"
@@ -203,43 +189,18 @@
                         </div>
                     </li>
                     <li class="recommendation-card">
-                        <img src="https://i.imgur.com/npA3DgP.png" alt="">
+                        <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/npA3DgP.png?raw=true"
+                            alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="https://i.imgur.com/C0NDvSA.png" alt="">
+                                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/C0NDvSA.png?raw=true"
+                                    alt="">
                                 <div>
                                     <p>juni讚神</p>
                                     <p class="recommend-text">Antony 床邊桌</p>
                                 </div>
                             </div>
                             <p>讚ㄉ！</p>
-                        </div>
-                    </li>
-                    <li class="recommendation-card">
-                        <img src="https://i.imgur.com/Ed7bxLr.png" alt="">
-                        <div class="recommend-content">
-                            <div class="recommend-img">
-                                <img src="https://i.imgur.com/hUsTZDm.png" alt="">
-                                <div>
-                                    <p>久安說安安</p>
-                                    <p class="recommend-text">Antony 單人床架</p>
-                                </div>
-                            </div>
-                            <p>一個躺剛剛好。</p>
-                        </div>
-                    </li>
-                    <li class="recommendation-card">
-                        <img src="https://i.imgur.com/mjA01Tk.png" alt="">
-                        <div class="recommend-content">
-                            <div class="recommend-img">
-                                <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/3ako6QX.png?raw=true"
-                                    alt="">
-                                <div>
-                                    <p>PeiQun</p>
-                                    <p class="recommend-text">Antony 雙人床架</p>
-                                </div>
-                            </div>
-                            <p>睡起來很舒適</p>
                         </div>
                     </li>
                 </ul>
@@ -372,42 +333,7 @@
     <section class="shoppingCart">
         <h3 class="section-title">我的購物車</h3>
         <div class="overflowWrap">
-            <table class="shoppingCart-table">
-                <tr>
-                    <th width="40%">品項</th>
-                    <th width="15%">單價</th>
-                    <th width="15%">數量</th>
-                    <th width="15%">金額</th>
-                    <th width="15%"></th>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="cardItem-title">
-                            <img src="https://i.imgur.com/HvT3zlU.png" alt="">
-                            <p>Antony 雙人床架／雙人加大</p>
-                        </div>
-                    </td>
-                    <td>NT$12,000</td>
-                    <td>1</td>
-                    <td>NT$12,000</td>
-                    <td class="discardBtn">
-                        <a href="#" class="material-icons">
-                            clear
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="#" class="discardAllBtn">刪除所有品項</a>
-                    </td>
-                    <td></td>
-                    <td></td>
-                    <td>
-                        <p>總金額</p>
-                    </td>
-                    <td>NT$13,980</td>
-                </tr>
-            </table>
+            <table class="shoppingCart-table"></table>
         </div>
     </section>
     <section class="orderInfo wrap" id="orderInfo">
