--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>admin</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="css/admin.css">
 </head>
 
 <body>
@@ -15,8 +19,7 @@
                 menu
             </span>
             <ul class="topBar-menu">
-                <li><a href="#discardAllBtn">後台管理</a></li>
-                <li><a href="#">管理員登入</a></li>
+                <li><a href="/">前台</a></li>
             </ul>
         </div>
     </nav>
@@ -106,8 +109,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.18/c3.js"></script>
     <!-- axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- sweet alert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script>
-
         // 預設 JS，請同學不要修改此處
         let menuOpenBtn = document.querySelector('.menuToggle');
         let linkBtn = document.querySelectorAll('.topBar-menu a');
@@ -129,6 +133,7 @@
             menu.classList.remove('openMenu');
         }
     </script>
+    <script src="js/admin.js"></script>
 </body>
 
 </html>
