--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,7 @@
                 menu
             </span>
             <ul class="topBar-menu">
-                <li><a href="/">前台</a></li>
+                <li><a href="/w8final">前台</a></li>
             </ul>
         </div>
     </nav>
