--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="#recommendation">好評推薦</a></li>
                 <li><a href="#transport">運送方式</a></li>
                 <li><a href="#orderInfo">立即預訂</a></li>
-                <li><a href="/admin.html">後台</a></li>
+                <li><a href="w8final//admin.html">後台</a></li>
             </ul>
         </div>
     </nav>
